Fixes and tweaks to state styles (#402)
* feat: search button on dark now inverts when active

* style: fixed menu button focus styling

* style: fix background color of checked radio group

* style: fix border overlap when accordion control has focus

* style: search button on Home layout now inverts when active

--- a/src/assets/styles/components/_accordion.scss
+++ b/src/assets/styles/components/_accordion.scss
@@ -72,6 +72,7 @@
 	font-weight: $font-weight-bold;
 	height: rem(54);
 	line-height: normal;
+	margin: calc(2 * var(--border-width)) 0;
 	padding-bottom: rem(14);
 	padding-left: 0;
 	padding-right: 0;
