--- a/src/assets/styles/components/_menu-button.scss
+++ b/src/assets/styles/components/_menu-button.scss
@@ -15,7 +15,6 @@
 	--active-color: var(--blue-200);
 	--focus-color: var(--off-white);
 	--focus-background-color: transparent;
-	--focus-box-shadow: 0 0 0 var(--border-width) var(--outline-color), 0 0 0 calc(2 * var(--border-width)) var(--parent-background-color), 0 0 0 calc(3 * var(--border-width)) var(--outline-color);
 }
 
 .menu-button__menu {
