--- a/src/assets/styles/components/_search.scss
+++ b/src/assets/styles/components/_search.scss
@@ -81,8 +81,9 @@
 		--outline-color: var(--blue-600);
 		--hover-color: var(--blue-600);
 		--hover-background-color: var(--blue-150);
-		--active-color: var(--blue-400);
-		--active-background-color: var(--background-color);
+		--active-border-color: var(--blue-50);
+		--active-color: var(--blue-50);
+		--active-background-color: var(--parent-background-color);
 		--focus-color: var(--blue-600);
 		--focus-background-color: var(--background-color);
 		--focus-border-color: var(--blue-50);
