--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -45,6 +45,11 @@
 		position: relative;
 		top: rem(-25);
 	}
+
+	.search-form.search-form--inverse .button--search {
+		--active-background-color: var(--blue-500);
+		--active-color: var(--blue-50);
+	}
 }
 
 .home__browse {
